# whoami

./: .mcp.json  CLAUDE.md  LICENSE  README.md  mcp_launcher.py  pyproject.toml
data/: basic_info.txt  objectives.txt  preferences.txt  professional.txt  projects_current.txt  schedule_patterns.txt  technical_stack.txt
src/whoami/: __init__.py  stdio_server.py
