[project]
name = "whoami"
version = "0.1.0"
description = "A local MCP server to give your personal agent context on who you are"
authors = [
    {name = "Johnathan Cassady",email = "johnathancassady77@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastmcp (>=2.11.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "whoami", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
